syntax = "proto3";

package vitepb;

message HashHeight {
    bytes hash = 1;
    uint64 height = 2;
}

message SnapshotAdditionalItem {
    uint64 quota = 1;
    uint64 aggregateQuota = 2;

    HashHeight snapshotHashHeight = 3;
}

message SnapshotAdditionalFragment {
    repeated SnapshotAdditionalItem list = 1;
}